# RISC_V_GRP_10

./: .gitignore  README.md
.github/workflows/: systemverilog-ci.yml
RISC_V/: RISC_V.xpr
RISC_V/RISC_V.srcs/constrs_1/new/: constraints.xdc
RISC_V/RISC_V.srcs/sim_1/new/: datapath_tb.sv  program.hex  tb_datapath.sv  testbench.sv  testbench_simple.sv
RISC_V/RISC_V.srcs/sources_1/new/: 7seg_dec.sv  ALU.sv  Clock_multiplier.sv  EX.sv  ID.sv  IF.sv  bootloader_rom.sv  data_memory.sv  datapath.sv  debounce.sv  debounce_single.sv  forwarding_unit.sv  instruction_memory.sv  io_manager.sv  iwb_interconnect.sv  program.mem  ps2_controller.sv  regFile.sv  rom.mem  spi_controller.sv  types_pkg.sv  (+2 more)
RISC_V/bootloader/: BOOTLOADER_GUIDE.md  bootloader.mem  bootloader.s  bootloader_v1_0.s  crt0.s  linker.ld  uart_loader.py  upload_program.bat
RISC_V/bootloader/demo_programs/: hello_world.s  my_gcd.s  pong_uart.s  uart_hello_world.mem  uart_hello_world.s  uart_switch_control.mem  uart_switch_control.s
RISC_V/bootloader/old/: bootloader.mem  bootloader.s
RISC_V/bootloader/programs/: buttons_to_led.s  hello_world.mem  pong_uart.mem  uart_hello.s  uart_to_7seg.s
RISC_V/tests/: README.md  bin_to_mem.py  patch_mem.py  run_testbench.py  run_tests.bat  run_tests.sh
RISC_V/tests/task1/: shift2.mem
RISC_V/tests/task2/: branchtrap.mem
RISC_V/tests/task3/: loop.mem  loop.res  loop.s  recursive.mem  recursive.res  recursive.s
RISC_V/tests/task4/: t14.mem
RISC_V/tests/verilator_simulation/: CMakeLists.txt  README.md  run_test.ps1  run_test.sh  tb_verilator.cpp
(+1 files in other folders)
